# GEO-network-client

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  RELEASES.md  main.cpp
ref_implementation/src/core/common/: CMakeLists.txt  Constraints.h  NodeUUID.cpp  NodeUUID.h  Types.h
ref_implementation/src/core/max_flow_calculation/: CMakeLists.txt  MaxFlowCalculationTrustLine.cpp  MaxFlowCalculationTrustLine.h
ref_implementation/src/core/paths/: CMakeLists.txt  PathsManager.cpp  PathsManager.h
ref_implementation/src/core/resources/: CMakeLists.txt
ref_implementation/src/core/transactions/: CMakeLists.txt
ref_implementation/src/core/trust_lines/: CMakeLists.txt  TrustLine.cpp  TrustLine.h
ref_implementation/src/libs/sqlite3/: CMakeLists.txt
src/core/common/: CMakeLists.txt  Constraints.h  NodeUUID.cpp  NodeUUID.h  Types.h
src/core/common/exceptions/: CMakeLists.txt  CallChainBreakException.h  CommandParsingError.h  ConflictError.h  Exception.cpp  Exception.h  IOError.cpp  IOError.h  IndexError.h  MemoryError.h  NotFoundError.h  OverflowError.h  PreconditionFailedError.h  PreconditionFaultError.h  RuntimeError.h  ValueError.cpp  ValueError.h
src/core/common/memory/: CMakeLists.txt  MemoryUtils.cpp  MemoryUtils.h  memory.cpp  memory.h
src/core/common/multiprecision/: CMakeLists.txt  MultiprecisionUtils.h
src/core/common/serialization/: BytesDeserializer.cpp  BytesDeserializer.h  BytesSerializer.cpp  BytesSerializer.h
src/core/common/time/: CMakeLists.txt  TimeUtils.cpp  TimeUtils.h
src/core/contractors/: CMakeLists.txt  Contractor.cpp  Contractor.h  ContractorsManager.cpp  ContractorsManager.h
src/core/contractors/addresses/: BaseAddress.cpp  BaseAddress.h  GNSAddress.cpp  GNSAddress.h  IPv4Address.cpp  IPv4Address.h  IPv4WithPortAddress.cpp  IPv4WithPortAddress.h
src/core/crypto/: ByteEncryptor.cpp  ByteEncryptor.h  CMakeLists.txt  CryptoKey.cpp  CryptoKey.h  KeyChain.cpp  KeyChain.h  MsgEncryptor.cpp  MsgEncryptor.h  ProviderMsgEncryptor.cpp  ProviderMsgEncryptor.h  keychain.cpp  keychain.h  lamportkeys.cpp  lamportkeys.h  lamportscheme.cpp  lamportscheme.h  memory.cpp  memory.h
src/core/db/: Block.cpp  Block.h  CMakeLists.txt  UUIDMapBlockStorage.cpp  UUIDMapBlockStorage.h
src/core/db/fields/: CMakeLists.txt
src/core/db/operations_history_storage/: CMakeLists.txt
src/core/db/uuid_map_block_storage/: CMakeLists.txt  Record.cpp  Record.h  UUIDMapBlockStorage.cpp  UUIDMapBlockStorage.h
src/core/delayed_tasks/: Backup.cpp  Backup.h  CMakeLists.txt  Cycles.cpp  Cycles.h  GatewayNotificationAndRoutingTablesDelayedTask.cpp  GatewayNotificationAndRoutingTablesDelayedTask.h  MaxFlowCalculationCacheUpdateDelayedTask.cpp  MaxFlowCalculationCacheUpdateDelayedTask.h  NotifyThatIAmIsGatewayDelayedTask.cpp  NotifyThatIAmIsGatewayDelayedTask.h  TopologyCacheUpdateDelayedTask.cpp  TopologyCacheUpdateDelayedTask.h  TopologyEventDelayedTask.cpp  TopologyEventDelayedTask.h
src/core/equivalents/: CMakeLists.txt  EquivalentsCyclesSubsystemsRouter.cpp  EquivalentsCyclesSubsystemsRouter.h  EquivalentsSubsystemsRouter.cpp  EquivalentsSubsystemsRouter.h  TrustLinesManagersRouter.cpp  TrustLinesManagersRouter.h
src/core/interface/commands/: CMakeLists.txt  CommandUUID.h  CommandsInterface.cpp  CommandsInterface.h
src/core/interface/commands_interface/: CMakeLists.txt  CommandUUID.h
src/core/interface/events_interface/: CMakeLists.txt
src/core/interface/results_interface/: CMakeLists.txt
src/core/interface/visual_interface/: CMakeLists.txt
src/core/max_flow_calculation/: CMakeLists.txt  MaxFlowCalculationNodeEntity.cpp  MaxFlowCalculationNodeEntity.h  MaxFlowCalculationTrustLine.cpp  MaxFlowCalculationTrustLine.h
src/core/max_flow_calculation/cashe/: MaxFlowCalculationCache.cpp  MaxFlowCalculationCache.h  MaxFlowCalculationCacheManager.cpp  MaxFlowCalculationCacheManager.h  MaxFlowCalculationNodeCache.cpp  MaxFlowCalculationNodeCache.h  MaxFlowCalculationNodeCacheManager.cpp  MaxFlowCalculationNodeCacheManager.h
src/core/max_flow_calculation/manager/: MaxFlowCalculationTrustLineManager.cpp  MaxFlowCalculationTrustLineManager.h  MaxFlowCalculationTrustLineWithPtr.cpp  MaxFlowCalculationTrustLineWithPtr.h
src/core/network/: CMakeLists.txt  Communicator.cpp  Communicator.h  UUID2Address.cpp  UUID2Address.h  UUID2IP.cpp  UUID2IP.h
src/core/network/communicator/: CMakeLists.txt  Communicator.cpp  Communicator.h
src/core/network/communicator_observing/: CMakeLists.txt  ObservingCommunicator.cpp  ObservingCommunicator.h
src/core/network/internal/: IncomingMessagesHandler.cpp  IncomingMessagesHandler.h  OutgoingMessagesHandler.cpp  OutgoingMessagesHandler.h  OutgoingMessagesQueue.cpp  OutgoingMessagesQueue.h
src/core/network/messages/: CMakeLists.txt  EquivalentMessage.cpp  EquivalentMessage.h  MaxFlowCalculationMessage.hpp  MaxFlowCalculationResultMessage.hpp  Message.cpp  Message.h  Message.hpp  OpenTrustLineMessage.cpp  OpenTrustLineMessage.h  ProcessingReportMessage.h  RoutingTablesMessage.h  RoutingTablesMessage.hpp  SenderMessage.cpp  SenderMessage.h  ServiceMessage.h  TestMessage.h  TransactionMessage.hpp  TrustLinesMessage.h  TrustLinesMessage.hpp
src/core/network/service/: UUID2Address.cpp  UUID2Address.h
src/core/observing/: CMakeLists.txt  ObservingCommunicator.cpp  ObservingCommunicator.h  ObservingHandler.cpp  ObservingHandler.h  ObservingTransaction.cpp  ObservingTransaction.h
src/core/observing/messages/: CMakeLists.txt  ObservingMessage.hpp  (+20 more)
src/core/providing/: CMakeLists.txt  Provider.cpp  Provider.h  ProvidingHandler.cpp  ProvidingHandler.h
src/core/resources/: CMakeLists.txt
src/core/topology/: CMakeLists.txt  TopologyTrustLine.cpp  TopologyTrustLine.h  TopologyTrustLineNew.cpp  TopologyTrustLineNew.h
src/core/transactions/: CMakeLists.txt  TransactionUUID.cpp  TransactionUUID.h  TransactionsManager.cpp  TransactionsManager.h
src/core/trust_lines/: CMakeLists.txt  TrustLine.cpp  TrustLine.h  TrustLineUUID.h  TrustLinesManager.cpp  TrustLinesManager.h  TrustLinesManagerTest.cpp  TrustLinesManagerTest.h
(+1803 files in other folders)
